--- a/pages/3986.html
+++ b/pages/3986.html
@@ -543,28 +543,53 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A trigonometric identity is (formally) a <a class='existingWikiWord' href='/nlab/show/commutative+diagram'>commutative diagram</a> in the <a class='existingWikiWord' href='/nlab/show/category'>category</a> of <a class='existingWikiWord' href='/nlab/show/cartesian+space'>cartesian spaces</a> and <a class='existingWikiWord' href='/nlab/show/partial+function'>partial functions</a> whose edges are labelled by <a class='existingWikiWord' href='/nlab/show/rational+function'>rational functions</a> (or sometimes <a class='existingWikiWord' href='/nlab/show/algebraic+function'>algebraic functions</a>) and <a class='existingWikiWord' href='/nlab/show/trigonometric+function'>trigonometric functions</a>.</p>
 
-<p>Slightly more precisely: each rational function <math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>)</mo><mo>∈</mo><mi>ℝ</mi><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>p(x_1, \ldots, x_n) \in \mathbb{R}(x_1, \ldots, x_n)</annotation></semantics></math> is interpreted as a <a class='existingWikiWord' href='/nlab/show/partial+function'>partial function</a> <math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>↩</mo><mi>D</mi><mover><mo>→</mo><mi>f</mi></mover><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \hookleftarrow D \stackrel{f}{\to} \mathbb{R}^n</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is the “natural domain” of <math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math> (see <a class='existingWikiWord' href='/nlab/show/rational+function'>rational function</a> for more discussion); these are partial <a class='existingWikiWord' href='/nlab/show/analytic+function'>analytic functions</a>. The basic trigonometric functions <math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mo>,</mo><mi>cos</mi></mrow><annotation encoding='application/x-tex'>\sin, \cos</annotation></semantics></math> are (total) analytic functions <math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R} \to \mathbb{R}</annotation></semantics></math>. All of these may be interpreted as partial functions <math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>⇀</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \rightharpoonup \mathbb{R}^n</annotation></semantics></math>, and generate a class of functions by applying the <a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a> structure on the category of partial functions that is induced by the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>cartesian product</a> on cartesian spaces. A trigonometric identity is then (formally) an <a class='existingWikiWord' href='/nlab/show/equality'>equality</a> of morphisms in the monoidal category thus generated.</p>
+<p>Slightly more precisely: each rational function <math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>)</mo><mo>∈</mo><mi>ℝ</mi><mo stretchy='false'>(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>p(x_1, \ldots, x_n) \in \mathbb{R}(x_1, \ldots, x_n)</annotation></semantics></math> is interpreted as a <a class='existingWikiWord' href='/nlab/show/partial+function'>partial function</a> <math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>↩</mo><mi>D</mi><mover><mo>→</mo><mi>f</mi></mover><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \hookleftarrow D \stackrel{f}{\to} \mathbb{R}^n</annotation></semantics></math> where <math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi></mrow><annotation encoding='application/x-tex'>D</annotation></semantics></math> is the “natural domain” of <math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math> (see <a class='existingWikiWord' href='/nlab/show/rational+function'>rational function</a> for more discussion); these are partial <a class='existingWikiWord' href='/nlab/show/analytic+function'>analytic functions</a>. The basic trigonometric functions <math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mo>,</mo><mi>cos</mi></mrow><annotation encoding='application/x-tex'>\sin, \cos</annotation></semantics></math> are (total) analytic functions <math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\mathbb{R} \to \mathbb{R}</annotation></semantics></math>. All of these may be interpreted as partial functions <math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>⇀</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n \rightharpoonup \mathbb{R}^n</annotation></semantics></math>, and generate a class of functions by applying the <a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a> structure on the category of partial functions that is induced by the <a class='existingWikiWord' href='/nlab/show/cartesian+product'>cartesian product</a> on cartesian spaces. A trigonometric identity is then (formally) an <a class='existingWikiWord' href='/nlab/show/equality'>equality</a> of morphisms in the monoidal category thus generated.</p>
 
 <p>Of course, this is complete overkill; category theorists are not oblivious to the fact that this is exactly the kind of description lampooned in Linderholm’s <em>Mathematics Made Difficult</em>. It’s just a formal way of covering bases. So let us add that in practice, a trigonometric identity usually involves functions obtained by substituting trigonometric functions into rational functions, or substituting rational <em>linear</em> (affine) functions into trigonometric functions: the class of functions considered is usually fairly limited in scope. Virtually all trigonometric identities can be seen as arising from suitable <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential function</a> identities on <em><a class='existingWikiWord' href='/nlab/show/complex+number'>complex numbers</a></em> such as</p>
 
 <ul>
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mi>i</mi><mi>t</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>cos</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>+</mo><mi>i</mi><mi>sin</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\exp(i t) = \cos(t) + i\sin(t)</annotation></semantics></math> (<a class='existingWikiWord' href='/nlab/show/Euler%27s+formula'>Euler&#39;s formula</a>);</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mi>i</mi><mi>t</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>cos</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>+</mo><mi>i</mi><mi>sin</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\exp(i t) = \cos(t) + i\sin(t)</annotation></semantics></math> (<a class='existingWikiWord' href='/nlab/show/Euler%27s+formula'>Euler&#39;s formula</a>);</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mi>z</mi><mo>+</mo><mi>w</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>w</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\exp(z + w) = \exp(z)\exp(w)</annotation></semantics></math>,</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mi>z</mi><mo>+</mo><mi>w</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mi>exp</mi><mo stretchy='false'>(</mo><mi>w</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\exp(z + w) = \exp(z)\exp(w)</annotation></semantics></math>,</p>
 </li>
 
 <li>
-<p><math class='maruku-mathml' display='inline' id='mathml_de94079c700ead099cb7528ee8eacbe2633dfc22_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mrow><mo>¯</mo></mover><mo>=</mo><mi>exp</mi><mo stretchy='false'>(</mo><mover><mi>z</mi><mo>¯</mo></mover><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\widebar{\exp(z)} = \exp(\widebar{z})</annotation></semantics></math>.</p>
+<p><math class='maruku-mathml' display='inline' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mi>exp</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mrow><mo>¯</mo></mover><mo>=</mo><mi>exp</mi><mo stretchy='false'>(</mo><mover><mi>z</mi><mo>¯</mo></mover><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\widebar{\exp(z)} = \exp(\widebar{z})</annotation></semantics></math>.</p>
 </li>
 </ul>
+
+<p>implying statements such as</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mrow><mo>(</mo><mi>α</mi><mo>+</mo><mi>β</mi><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>sin</mi><mo stretchy='false'>(</mo><mi>α</mi><mo stretchy='false'>)</mo><mi>cos</mi><mo stretchy='false'>(</mo><mi>β</mi><mo stretchy='false'>)</mo><mo>+</mo><mi>cos</mi><mo stretchy='false'>(</mo><mi>α</mi><mo stretchy='false'>)</mo><mi>sin</mi><mo stretchy='false'>(</mo><mi>β</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  \sin\left( \alpha + \beta \right)
+  \;=\;
+  \sin(\alpha) \cos(\beta) + \cos(\alpha) \sin(\beta)
+
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>cos</mi><mo stretchy='false'>(</mo><mi>α</mi><mo>+</mo><mi>β</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mi>cos</mi><mo stretchy='false'>(</mo><mi>α</mi><mo stretchy='false'>)</mo><mi>cos</mi><mo stretchy='false'>(</mo><mi>β</mi><mo stretchy='false'>)</mo><mo>−</mo><mi>sin</mi><mo stretchy='false'>(</mo><mi>α</mi><mo stretchy='false'>)</mo><mi>sin</mi><mo stretchy='false'>(</mo><mi>β</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  \cos(\alpha + \beta)
+  \;=\;
+  \cos(\alpha) \cos(\beta) - \sin(\alpha) \sin(\beta)
+
+</annotation></semantics></math></div>
+<p>which in turn implies</p>
+<div class='maruku-equation' id='eq:ProductOfSinWithCos'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_2192da1d344808e7a14a008ff5685fa80ce8d137_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sin</mi><mo stretchy='false'>(</mo><mi>α</mi><mo stretchy='false'>)</mo><mi>cos</mi><mo stretchy='false'>(</mo><mi>β</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>2</mn></mfrac></mstyle><mrow><mo>(</mo><mi>sin</mi><mo stretchy='false'>(</mo><mi>α</mi><mo>+</mo><mi>β</mi><mo stretchy='false'>)</mo><mo>+</mo><mi>sin</mi><mo stretchy='false'>(</mo><mi>α</mi><mo>−</mo><mi>β</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow></mrow><annotation encoding='application/x-tex'>
+  
+  \sin(\alpha) \cos(\beta) 
+  \;=\; 
+  \tfrac{1}{2}
+  \left(
+    \sin(\alpha + \beta) + \sin(\alpha - \beta)
+  \right)
+
+</annotation></semantics></math></div>
+<p>etc.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -578,20 +603,28 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/List_of_trigonometric_identities'>List of trigonometric identities</a></em></li>
+</ul>
+
 <p>
  
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on September 15, 2015 14:37:08 
+  Revised on November 22, 2017 08:17:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (147.231.89.106)
+  (92.76.20.22)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/trigonometric+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/trigonometric+identity/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/trigonometric+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/trigonometric+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/trigonometric+identity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/trigonometric+identity/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/trigonometric+identity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/trigonometric+identity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
