--- a/pages/18798.html
+++ b/pages/18798.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      trigonometry in nLab
+      cosine in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      trigonometry
+      cosine
   </h1>
 
 
@@ -308,181 +308,23 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
-
-<h4 id='geometry'>Geometry</h4>
-
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a></strong> / <strong><a class='existingWikiWord' href='/nlab/show/derived+geometry'>derived geometry</a></strong></p>
-
-<h2 id='ingredients'>Ingredients</h2>
+    <h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/higher+topos+theory'>higher topos theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/trigonometry'>trigonometry</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a></p>
-</li>
-</ul>
-
-<h2 id='concepts'>Concepts</h2>
-
-<ul>
-<li>
-<p><strong>geometric <a class='existingWikiWord' href='/nlab/show/big+and+little+toposes'>little</a> <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>es</strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/structured+%28infinity%2C1%29-topos'>structured (∞,1)-topos</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/sine'>sine</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/geometry+%28for+structured+%28infinity%2C1%29-toposes%29'>geometry (for structured (∞,1)-toposes)</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/generalized+scheme'>generalized scheme</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><strong>geometric <a class='existingWikiWord' href='/nlab/show/big+and+little+toposes'>big</a> <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-topos'>(∞,1)-topos</a>es</strong></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos'>cohesive (∞,1)-topos</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/function+algebras+on+infinity-stacks'>function algebras on ∞-stacks</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/geometric+infinity-stack'>geometric ∞-stacks</a></li>
-</ul>
-</li>
-</ul>
-
-<h2 id='constructions'>Constructions</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/loop+space+object'>loop space object</a>, <a class='existingWikiWord' href='/nlab/show/free+loop+space+object'>free loop space object</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+in+a+locally+infinity-connected+%28infinity%2C1%29-topos'>fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a> / <a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+of+a+locally+infinity-connected+%28infinity%2C1%29-topos'>of a locally ∞-connected (∞,1)-topos</a></p>
-</li>
-</ul>
-
-<h2 id='examples'>Examples</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/derived+algebraic+geometry'>derived algebraic geometry</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/%C3%A9tale+%28infinity%2C1%29-site'>étale (∞,1)-site</a>, <a class='existingWikiWord' href='/nlab/show/Hochschild+cohomology'>Hochschild cohomology</a> of <a class='existingWikiWord' href='/nlab/show/differential+graded+algebra'>dg-algebra</a>s</p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/dg-geometry'>dg-geometry</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/dg-scheme'>dg-scheme</a></li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/schematic+homotopy+type'>schematic homotopy type</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/derived+noncommutative+geometry'>derived noncommutative geometry</a></p>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/noncommutative+geometry'>noncommutative geometry</a></li>
-</ul>
-</li>
-
-<li>
-<p>derived smooth geometry</p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/differential+geometry'>differential geometry</a>, <a class='existingWikiWord' href='/nlab/show/differential+topology'>differential topology</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/derived+smooth+manifold'>derived smooth manifold</a>, <a class='existingWikiWord' href='/nlab/show/differential+graded+manifold'>dg-manifold</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/smooth+infinity-groupoid'>smooth ∞-groupoid</a>, <a class='existingWikiWord' href='/nlab/show/Lie+infinity-algebroid'>∞-Lie algebroid</a></p>
-</li>
-</ul>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/higher+symplectic+geometry'>higher symplectic geometry</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/higher+Klein+geometry'>higher Klein geometry</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/higher+Cartan+geometry'>higher Cartan geometry</a></p>
-</li>
-</ul>
-
-<h2 id='theorems'>Theorems</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Isbell+duality'>Isbell duality</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Hochschild+cohomology'>Jones&#39; theorem</a>, <a class='existingWikiWord' href='/nlab/show/Hochschild+cohomology'>Deligne-Kontsevich conjecture</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Tannaka+duality+for+geometric+stacks'>Tannaka duality for geometric stacks</a></p>
-</li>
-</ul>
-<div>
-<p>
-  <a href='/nlab/edit/higher+geometry+-+contents'>Edit this sidebar</a>
-</p>
-</div></div>
-</div>
-</div>
-
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p><strong>Trigonometry</strong> is a geometric discipline which comprises the study of metric properties of <a class='existingWikiWord' href='/nlab/show/triangle'>triangles</a> (measures of angles, sides and of various auxiliary segments and angles constructed from given triangle), usually on a euclidean or hyperbolic plane or on a <a class='existingWikiWord' href='/nlab/show/unit+sphere'>unit sphere</a>. Thus we distinguish the usual euclidean from spherical and hyperbolic trigonometry; there are also generalizations to trigonometry over other fields.</p>
-
-<p><a class='existingWikiWord' href='/nlab/show/trigonometric+function'>Trigonometric functions</a> for real values of argument can be defined in terms of trigonometry of unit triangle (triangle with one of the sides of unit length), where the argument is understood as an angle whose longer side is of unit length. Similarly for <a class='existingWikiWord' href='/nlab/show/hyperbolic+function'>hyperbolic trigonometric functions</a> which can be geometrically defined in terms of hyperbolic unit triangles.</p>
-
-<h2 id='related_concepts'>Related concepts</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Euclidean+geometry'>Euclidean geometry</a>, <a class='existingWikiWord' href='/nlab/show/hyperbolic+geometry'>hyperbolic geometry</a>, <a class='existingWikiWord' href='/nlab/show/elliptic+geometry'>elliptic geometry</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/sine'>sine</a>, <a class='existingWikiWord' href='/nlab/show/cosine'>cosine</a>, <a class='existingWikiWord' href='/nlab/show/exponential+map'>exponential</a>, <a class='existingWikiWord' href='/nlab/show/Euler%27s+formula'>Euler&#39;s formula</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Euler%27s+formula'>Euler&#39;s formula</a></p>
 </li>
 
 <li>
@@ -493,33 +335,30 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>
-<p>Norman Wildberger, <em>Universal hyperbolic geometry I: trigonometry</em>, Geometriae Dedicata 163(1), 2009 <a href='http://arxiv.org/abs/0909.1377'>arxiv/0909.1377</a> <a href='http://dx.doi.org/10.1007/s10711-012-9746-9'>doi</a></p>
-</li>
-
-<li>
-<p>wikipedia: <a href='https://en.wikipedia.org/wiki/Trigonometry'>trigonometry</a>, <a href='https://en.wikipedia.org/wiki/Spherical_trigonometry'>spherical trigonometry</a></p>
-</li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Sine'>Sine</a></em></li>
 </ul>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 24, 2017 13:59:14 
+  Created on November 24, 2017 13:58:45 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/trigonometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/trigonometry/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/trigonometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/trigonometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cosine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/trigonometry" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/cosine" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/trigonometry" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/cosine" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/trigonometry" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/cosine" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
