--- a/pages/18801.html
+++ b/pages/18801.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      speed in nLab
+      hyperbolic sine in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      speed
+      hyperbolic sine
   </h1>
 
 
@@ -312,26 +312,24 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/hyperbolic+cosine'>hyperbolic cosine</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/velocity'>velocity</a>, <a class='existingWikiWord' href='/nlab/show/rapidity'>rapidity</a></p>
+<p><span class='newWikiWord'>hyerbolic tangent<a href='/nlab/new/hyerbolic+tangent'>?</a></span></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/position'>position</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/mass'>mass</a>, <a class='existingWikiWord' href='/nlab/show/charge'>charge</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/sine'>sine</a>, <a class='existingWikiWord' href='/nlab/show/cosine'>cosine</a></p>
 </li>
 </ul>
 
 <h2 id='references'>References</h2>
 
+<p>See also</p>
+
 <ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Speed'>Speed</a></em></li>
+<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Hyperbolic_function#Cosh'>Hyperbolic function</a></em></li>
 </ul>
 
 <p>
@@ -339,22 +337,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 24, 2017 16:26:57 
+  Created on November 24, 2017 16:30:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/speed" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/speed/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/speed" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/speed" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hyperbolic+sine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/speed" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/hyperbolic+sine" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/speed" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/hyperbolic+sine" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/speed" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/hyperbolic+sine" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
